# http-header-fuzzer

./: .gitignore  LICENSE  README.md  pyproject.toml
fuzzer/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  core.py  payloads.py  raw_sender.py  reporter.py  sender.py
wordlists/: headers.txt
